Fix zoom and logo placement on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 #content {
   width: 90%;
   max-width: 720px;
@@ -9,8 +7,8 @@
 .logo {
   display: block;
   background-color: #D9DFE1;
-  width: 240px;
-  max-width: 90%;
+  width: 60%;
+  max-width: 240px;
   padding: 80px 20px 20px;
   border-radius: 0 0 20px 20px;
   border: 1px solid white;
@@ -25,7 +23,7 @@
 }
 
 .main {
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .contact a {
@@ -51,6 +49,12 @@
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 540px) {
+  body {
+    zoom: 80%;
+  }
 }
 
 @media (min-width: 1024px) and (min-aspect-ratio: 16/9) {
